# bricc

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  wifi.rs
