[package]
name = "bricc"
version = "0.1.0"
authors = ["Ellen Poe <ellen.h.poe@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.30", features = ["binstart"] }
esp-idf-svc = "0.36.3"
log = "0.4.14"
embedded-svc = "0.16.3"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
